--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "srkits/sylius-razor-pay-plugin",
+    "name": "WebniseSolutions/sylius-razorpay",
     "minimum-stability": "dev",
     "type": "sylius-plugin",
     "keywords": ["sylius", "sylius-plugin"],
-    "description": "Razor Pay Payment integration in Sylius Project",
+    "description": "Razorpay Payment integration in Sylius Project",
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^8.1",
         "razorpay/razorpay": "2.*",
-        "sylius/sylius": "^1.8"
+        "sylius/sylius": "^1.12"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
